parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> classlist
Rule 2     classlist -> classlist cs PONTOEVIRGULA
Rule 3     classlist -> cs PONTOEVIRGULA
Rule 4     cs -> CLASS ID ABRECHAVES featurelist FECHACHAVES
Rule 5     cs -> CLASS ID INHERITS ID ABRECHAVES featurelist FECHACHAVES
Rule 6     featurelist -> featurelist feature
Rule 7     featurelist -> empty
Rule 8     feature -> ID ABREPARENTESES formallist FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES PONTOEVIRGULA
Rule 9     feature -> ID DOISPONTOS ID PONTOEVIRGULA
Rule 10    feature -> ID DOISPONTOS ID ATRIBUICAO expr PONTOEVIRGULA
Rule 11    feature -> empty
Rule 12    formallist -> formallist VIRGULA formal
Rule 13    formallist -> empty
Rule 14    formallist -> formal
Rule 15    formal -> ID DOISPONTOS ID
Rule 16    expr -> ISVOID expr
Rule 17    expr -> COMPLEMENTO expr
Rule 18    expr -> NOT expr
Rule 19    expr -> NEW ID
Rule 20    expr -> ID
Rule 21    expr -> NUMERO
Rule 22    expr -> STRING
Rule 23    expr -> TRUE
Rule 24    expr -> FALSE
Rule 25    expr -> expr MENOR expr
Rule 26    expr -> expr MENORIGUAL expr
Rule 27    expr -> expr IGUAL expr
Rule 28    expr -> expr MAIS expr
Rule 29    expr -> expr MENOS expr
Rule 30    expr -> expr MULTIPLICACAO expr
Rule 31    expr -> expr DIVISAO expr
Rule 32    expr -> ID ATRIBUICAO expr
Rule 33    expr -> ABREPARENTESES expr FECHAPARENTESES
Rule 34    expr -> expr ARROBA ID PONTO ID ABREPARENTESES exprlist FECHAPARENTESES
Rule 35    expr -> expr PONTO ID ABREPARENTESES exprlist FECHAPARENTESES
Rule 36    expr -> ID ABREPARENTESES exprlist FECHAPARENTESES
Rule 37    expr -> IF expr THEN expr ELSE expr FI
Rule 38    expr -> WHILE expr LOOP expr POOL
Rule 39    expr -> ABRECHAVES exprlista FECHACHAVES
Rule 40    expr -> LET ID DOISPONTOS ID exprlistlet IN expr
Rule 41    expr -> LET ID DOISPONTOS ID ATRIBUICAO expr exprlistlet IN expr
Rule 42    expr -> CASE expr OF exprlistcase ESAC
Rule 43    exprlista -> exprlista expr PONTOEVIRGULA
Rule 44    exprlista -> expr PONTOEVIRGULA
Rule 45    exprlist -> exprlist VIRGULA expr
Rule 46    exprlist -> expr
Rule 47    exprlist -> empty
Rule 48    exprlistlet -> exprlistlet letexpr
Rule 49    exprlistlet -> letexpr
Rule 50    letexpr -> VIRGULA ID DOISPONTOS ID
Rule 51    letexpr -> VIRGULA ID DOISPONTOS ID ATRIBUICAO expr
Rule 52    letexpr -> empty
Rule 53    exprlistcase -> exprlistcase exprcase
Rule 54    exprlistcase -> exprcase
Rule 55    exprcase -> ID DOISPONTOS ID SETA expr PONTOEVIRGULA
Rule 56    empty -> <empty>

Terminals, with rules where they appear

ABRECHAVES           : 4 5 8 39
ABREPARENTESES       : 8 33 34 35 36
ARROBA               : 34
ATRIBUICAO           : 10 32 41 51
CASE                 : 42
CLASS                : 4 5
COMPLEMENTO          : 17
DIVISAO              : 31
DOISPONTOS           : 8 9 10 15 40 41 50 51 55
ELSE                 : 37
ESAC                 : 42
FALSE                : 24
FECHACHAVES          : 4 5 8 39
FECHAPARENTESES      : 8 33 34 35 36
FI                   : 37
ID                   : 4 5 5 8 8 9 9 10 10 15 15 19 20 32 34 34 35 36 40 40 41 41 50 50 51 51 55 55
IF                   : 37
IGUAL                : 27
IN                   : 40 41
INHERITS             : 5
ISVOID               : 16
LET                  : 40 41
LOOP                 : 38
MAIS                 : 28
MENOR                : 25
MENORIGUAL           : 26
MENOS                : 29
MULTIPLICACAO        : 30
NEW                  : 19
NOT                  : 18
NUMERO               : 21
OF                   : 42
PONTO                : 34 35
PONTOEVIRGULA        : 2 3 8 9 10 43 44 55
POOL                 : 38
SETA                 : 55
STRING               : 22
THEN                 : 37
TRUE                 : 23
VIRGULA              : 12 45 50 51
WHILE                : 38
error                : 

Nonterminals, with rules where they appear

classlist            : 1 2
cs                   : 2 3
empty                : 7 11 13 47 52
expr                 : 8 10 16 17 18 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 33 34 35 37 37 37 38 38 40 41 41 42 43 44 45 46 51 55
exprcase             : 53 54
exprlist             : 34 35 36 45
exprlista            : 39 43
exprlistcase         : 42 53
exprlistlet          : 40 41 48
feature              : 6
featurelist          : 4 5 6
formal               : 12 14
formallist           : 8 12
letexpr              : 48 49
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . classlist
    (2) classlist -> . classlist cs PONTOEVIRGULA
    (3) classlist -> . cs PONTOEVIRGULA
    (4) cs -> . CLASS ID ABRECHAVES featurelist FECHACHAVES
    (5) cs -> . CLASS ID INHERITS ID ABRECHAVES featurelist FECHACHAVES

    CLASS           shift and go to state 4

    program                        shift and go to state 1
    classlist                      shift and go to state 2
    cs                             shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> classlist .
    (2) classlist -> classlist . cs PONTOEVIRGULA
    (4) cs -> . CLASS ID ABRECHAVES featurelist FECHACHAVES
    (5) cs -> . CLASS ID INHERITS ID ABRECHAVES featurelist FECHACHAVES

    $end            reduce using rule 1 (program -> classlist .)
    CLASS           shift and go to state 4

    cs                             shift and go to state 5

state 3

    (3) classlist -> cs . PONTOEVIRGULA

    PONTOEVIRGULA   shift and go to state 6


state 4

    (4) cs -> CLASS . ID ABRECHAVES featurelist FECHACHAVES
    (5) cs -> CLASS . ID INHERITS ID ABRECHAVES featurelist FECHACHAVES

    ID              shift and go to state 7


state 5

    (2) classlist -> classlist cs . PONTOEVIRGULA

    PONTOEVIRGULA   shift and go to state 8


state 6

    (3) classlist -> cs PONTOEVIRGULA .

    CLASS           reduce using rule 3 (classlist -> cs PONTOEVIRGULA .)
    $end            reduce using rule 3 (classlist -> cs PONTOEVIRGULA .)


state 7

    (4) cs -> CLASS ID . ABRECHAVES featurelist FECHACHAVES
    (5) cs -> CLASS ID . INHERITS ID ABRECHAVES featurelist FECHACHAVES

    ABRECHAVES      shift and go to state 9
    INHERITS        shift and go to state 10


state 8

    (2) classlist -> classlist cs PONTOEVIRGULA .

    CLASS           reduce using rule 2 (classlist -> classlist cs PONTOEVIRGULA .)
    $end            reduce using rule 2 (classlist -> classlist cs PONTOEVIRGULA .)


state 9

    (4) cs -> CLASS ID ABRECHAVES . featurelist FECHACHAVES
    (6) featurelist -> . featurelist feature
    (7) featurelist -> . empty
    (56) empty -> .

    FECHACHAVES     reduce using rule 56 (empty -> .)
    ID              reduce using rule 56 (empty -> .)

    featurelist                    shift and go to state 11
    empty                          shift and go to state 12

state 10

    (5) cs -> CLASS ID INHERITS . ID ABRECHAVES featurelist FECHACHAVES

    ID              shift and go to state 13


state 11

    (4) cs -> CLASS ID ABRECHAVES featurelist . FECHACHAVES
    (6) featurelist -> featurelist . feature
    (8) feature -> . ID ABREPARENTESES formallist FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES PONTOEVIRGULA
    (9) feature -> . ID DOISPONTOS ID PONTOEVIRGULA
    (10) feature -> . ID DOISPONTOS ID ATRIBUICAO expr PONTOEVIRGULA
    (11) feature -> . empty
    (56) empty -> .

  ! shift/reduce conflict for FECHACHAVES resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    FECHACHAVES     shift and go to state 15
    ID              shift and go to state 14

  ! FECHACHAVES     [ reduce using rule 56 (empty -> .) ]
  ! ID              [ reduce using rule 56 (empty -> .) ]

    feature                        shift and go to state 16
    empty                          shift and go to state 17

state 12

    (7) featurelist -> empty .

    FECHACHAVES     reduce using rule 7 (featurelist -> empty .)
    ID              reduce using rule 7 (featurelist -> empty .)


state 13

    (5) cs -> CLASS ID INHERITS ID . ABRECHAVES featurelist FECHACHAVES

    ABRECHAVES      shift and go to state 18


state 14

    (8) feature -> ID . ABREPARENTESES formallist FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES PONTOEVIRGULA
    (9) feature -> ID . DOISPONTOS ID PONTOEVIRGULA
    (10) feature -> ID . DOISPONTOS ID ATRIBUICAO expr PONTOEVIRGULA

    ABREPARENTESES  shift and go to state 19
    DOISPONTOS      shift and go to state 20


state 15

    (4) cs -> CLASS ID ABRECHAVES featurelist FECHACHAVES .

    PONTOEVIRGULA   reduce using rule 4 (cs -> CLASS ID ABRECHAVES featurelist FECHACHAVES .)


state 16

    (6) featurelist -> featurelist feature .

    FECHACHAVES     reduce using rule 6 (featurelist -> featurelist feature .)
    ID              reduce using rule 6 (featurelist -> featurelist feature .)


state 17

    (11) feature -> empty .

    FECHACHAVES     reduce using rule 11 (feature -> empty .)
    ID              reduce using rule 11 (feature -> empty .)


state 18

    (5) cs -> CLASS ID INHERITS ID ABRECHAVES . featurelist FECHACHAVES
    (6) featurelist -> . featurelist feature
    (7) featurelist -> . empty
    (56) empty -> .

    FECHACHAVES     reduce using rule 56 (empty -> .)
    ID              reduce using rule 56 (empty -> .)

    featurelist                    shift and go to state 21
    empty                          shift and go to state 12

state 19

    (8) feature -> ID ABREPARENTESES . formallist FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES PONTOEVIRGULA
    (12) formallist -> . formallist VIRGULA formal
    (13) formallist -> . empty
    (14) formallist -> . formal
    (56) empty -> .
    (15) formal -> . ID DOISPONTOS ID

    FECHAPARENTESES reduce using rule 56 (empty -> .)
    VIRGULA         reduce using rule 56 (empty -> .)
    ID              shift and go to state 22

    formallist                     shift and go to state 23
    formal                         shift and go to state 24
    empty                          shift and go to state 25

state 20

    (9) feature -> ID DOISPONTOS . ID PONTOEVIRGULA
    (10) feature -> ID DOISPONTOS . ID ATRIBUICAO expr PONTOEVIRGULA

    ID              shift and go to state 26


state 21

    (5) cs -> CLASS ID INHERITS ID ABRECHAVES featurelist . FECHACHAVES
    (6) featurelist -> featurelist . feature
    (8) feature -> . ID ABREPARENTESES formallist FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES PONTOEVIRGULA
    (9) feature -> . ID DOISPONTOS ID PONTOEVIRGULA
    (10) feature -> . ID DOISPONTOS ID ATRIBUICAO expr PONTOEVIRGULA
    (11) feature -> . empty
    (56) empty -> .

  ! shift/reduce conflict for FECHACHAVES resolved as shift
  ! shift/reduce conflict for ID resolved as shift
    FECHACHAVES     shift and go to state 27
    ID              shift and go to state 14

  ! FECHACHAVES     [ reduce using rule 56 (empty -> .) ]
  ! ID              [ reduce using rule 56 (empty -> .) ]

    feature                        shift and go to state 16
    empty                          shift and go to state 17

state 22

    (15) formal -> ID . DOISPONTOS ID

    DOISPONTOS      shift and go to state 28


state 23

    (8) feature -> ID ABREPARENTESES formallist . FECHAPARENTESES DOISPONTOS ID ABRECHAVES expr FECHACHAVES PONTOEVIRGULA
    (12) formallist -> formallist . VIRGULA formal

    FECHAPARENTESES shift and go to state 29
    VIRGULA         shift and go to state 30


state 24

    (14) formallist -> formal .

    FECHAPARENTESES reduce using rule 14 (formallist -> formal .)
    VIRGULA         reduce using rule 14 (formallist -> formal .)


state 25

    (13) formallist -> empty .

    FECHAPARENTESES reduce using rule 13 (formallist -> empty .)
    VIRGULA         reduce using rule 13 (formallist -> empty .)


state 26

    (9) feature -> ID DOISPONTOS ID . PONTOEVIRGULA
    (10) feature -> ID DOISPONTOS ID . ATRIBUICAO expr PONTOEVIRGULA

    PONTOEVIRGULA   shift and go to state 31
    ATRIBUICAO      shift and go to state 32


state 27

    (5) cs -> CLASS ID INHERITS ID ABRECHAVES featurelist FECHACHAVES .

    PONTOEVIRGULA   reduce using rule 5 (cs -> CLASS ID INHERITS ID ABRECHAVES featurelist FECHACHAVES .)


state 28

    (15) formal -> ID DOISPONTOS . ID

    ID              shift and go to state 33


state 29

    (8) feature -> ID ABREPARENTESES formallist FECHAPARENTESES . DOISPONTOS ID ABRECHAVES expr FECHACHAVES PONTOEVIRGULA

    DOISPONTOS      shift and go to state 34


state 30

    (12) formallist -> formallist VIRGULA . formal
    (15) formal -> . ID DOISPONTOS ID

    ID              shift and go to state 22

    formal                         shift and go to state 35

state 31

    (9) feature -> ID DOISPONTOS ID PONTOEVIRGULA .

    FECHACHAVES     reduce using rule 9 (feature -> ID DOISPONTOS ID PONTOEVIRGULA .)
    ID              reduce using rule 9 (feature -> ID DOISPONTOS ID PONTOEVIRGULA .)


state 32

    (10) feature -> ID DOISPONTOS ID ATRIBUICAO . expr PONTOEVIRGULA
    (16) expr -> . ISVOID expr
    (17) expr -> . COMPLEMENTO expr
    (18) expr -> . NOT expr
    (19) expr -> . NEW ID
    (20) expr -> . ID
    (21) expr -> . NUMERO
    (22) expr -> . STRING
    (23) expr -> . TRUE
    (24) expr -> . FALSE
    (25) expr -> . expr MENOR expr
    (26) expr -> . expr MENORIGUAL expr
    (27) expr -> . expr IGUAL expr
    (28) expr -> . expr MAIS expr
    (29) expr -> . expr MENOS expr
    (30) expr -> . expr MULTIPLICACAO expr
    (31) expr -> . expr DIVISAO expr
    (32) expr -> . ID ATRIBUICAO expr
    (33) expr -> . ABREPARENTESES expr FECHAPARENTESES
    (34) expr -> . expr ARROBA ID PONTO ID ABREPARENTESES exprlist FECHAPARENTESES
    (35) expr -> . expr PONTO ID ABREPARENTESES exprlist FECHAPARENTESES
    (36) expr -> . ID ABREPARENTESES exprlist FECHAPARENTESES
    (37) expr -> . IF expr THEN expr ELSE expr FI
    (38) expr -> . WHILE expr LOOP expr POOL
    (39) expr -> . ABRECHAVES exprlista FECHACHAVES
    (40) expr -> . LET ID DOISPONTOS ID exprlistlet IN expr
    (41) expr -> . LET ID DOISPONTOS ID ATRIBUICAO expr exprlistlet IN expr
    (42) expr -> . CASE expr OF exprlistcase ESAC

    ISVOID          shift and go to state 38
    COMPLEMENTO     shift and go to state 39
    NOT             shift and go to state 40
    NEW             shift and go to state 41
    ID              shift and go to state 36
    NUMERO          shift and go to state 42
    STRING          shift and go to state 43
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    ABREPARENTESES  shift and go to state 46
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    ABRECHAVES      shift and go to state 49
    LET             shift and go to state 50
    CASE            shift and go to state 51

    expr                           shift and go to state 37

state 33

    (15) formal -> ID DOISPONTOS ID .

    FECHAPARENTESES reduce using rule 15 (formal -> ID DOISPONTOS ID .)
    VIRGULA         reduce using rule 15 (formal -> ID DOISPONTOS ID .)


state 34

    (8) feature -> ID ABREPARENTESES formallist FECHAPARENTESES DOISPONTOS . ID ABRECHAVES expr FECHACHAVES PONTOEVIRGULA

    ID              shift and go to state 52


state 35

    (12) formallist -> formallist VIRGULA formal .

    FECHAPARENTESES reduce using rule 12 (formallist -> formallist VIRGULA formal .)
    VIRGULA         reduce using rule 12 (formallist -> formallist VIRGULA formal .)


state 36

    (20) expr -> ID .
    (32) expr -> ID . ATRIBUICAO expr
    (36) expr -> ID . ABREPARENTESES exprlist FECHAPARENTESES

    PONTOEVIRGULA   reduce using rule 20 (expr -> ID .)
    MENOR           reduce using rule 20 (expr -> ID .)
    MENORIGUAL      reduce using rule 20 (expr -> ID .)
    IGUAL           reduce using rule 20 (expr -> ID .)
    MAIS            reduce using rule 20 (expr -> ID .)
    MENOS           reduce using rule 20 (expr -> ID .)
    MULTIPLICACAO   reduce using rule 20 (expr -> ID .)
    DIVISAO         reduce using rule 20 (expr -> ID .)
    ARROBA          reduce using rule 20 (expr -> ID .)
    PONTO           reduce using rule 20 (expr -> ID .)
    FECHAPARENTESES reduce using rule 20 (expr -> ID .)
    THEN            reduce using rule 20 (expr -> ID .)
    LOOP            reduce using rule 20 (expr -> ID .)
    OF              reduce using rule 20 (expr -> ID .)
    VIRGULA         reduce using rule 20 (expr -> ID .)
    FECHACHAVES     reduce using rule 20 (expr -> ID .)
    ELSE            reduce using rule 20 (expr -> ID .)
    POOL            reduce using rule 20 (expr -> ID .)
    FI              reduce using rule 20 (expr -> ID .)
    IN              reduce using rule 20 (expr -> ID .)
    ATRIBUICAO      shift and go to state 53
    ABREPARENTESES  shift and go to state 54


state 37

    (10) feature -> ID DOISPONTOS ID ATRIBUICAO expr . PONTOEVIRGULA
    (25) expr -> expr . MENOR expr
    (26) expr -> expr . MENORIGUAL expr
    (27) expr -> expr . IGUAL expr
    (28) expr -> expr . MAIS expr
    (29) expr -> expr . MENOS expr
    (30) expr -> expr . MULTIPLICACAO expr
    (31) expr -> expr . DIVISAO expr
    (34) expr -> expr . ARROBA ID PONTO ID ABREPARENTESES exprlist FECHAPARENTESES
    (35) expr -> expr . PONTO ID ABREPARENTESES exprlist FECHAPARENTESES

    PONTOEVIRGULA   shift and go to state 55
    MENOR           shift and go to state 56
    MENORIGUAL      shift and go to state 57
    IGUAL           shift and go to state 58
    MAIS            shift and go to state 59
    MENOS           shift and go to state 60
    MULTIPLICACAO   shift and go to state 61
    DIVISAO         shift and go to state 62
    ARROBA          shift and go to state 63
    PONTO           shift and go to state 64


state 38

    (16) expr -> ISVOID . expr
    (16) expr -> . ISVOID expr
    (17) expr -> . COMPLEMENTO expr
    (18) expr -> . NOT expr
    (19) expr -> . NEW ID
    (20) expr -> . ID
    (21) expr -> . NUMERO
    (22) expr -> . STRING
    (23) expr -> . TRUE
    (24) expr -> . FALSE
    (25) expr -> . expr MENOR expr
    (26) expr -> . expr MENORIGUAL expr
    (27) expr -> . expr IGUAL expr
    (28) expr -> . expr MAIS expr
    (29) expr -> . expr MENOS expr
    (30) expr -> . expr MULTIPLICACAO expr
    (31) expr -> . expr DIVISAO expr
    (32) expr -> . ID ATRIBUICAO expr
    (33) expr -> . ABREPARENTESES expr FECHAPARENTESES
    (34) expr -> . expr ARROBA ID PONTO ID ABREPARENTESES exprlist FECHAPARENTESES
    (35) expr -> . expr PONTO ID ABREPARENTESES exprlist FECHAPARENTESES
    (36) expr -> . ID ABREPARENTESES exprlist FECHAPARENTESES
    (37) expr -> . IF expr THEN expr ELSE expr FI
    (38) expr -> . WHILE expr LOOP expr POOL
    (39) expr -> . ABRECHAVES exprlista FECHACHAVES
    (40) expr -> . LET ID DOISPONTOS ID exprlistlet IN expr
    (41) expr -> . LET ID DOISPONTOS ID ATRIBUICAO expr exprlistlet IN expr
    (42) expr -> . CASE expr OF exprlistcase ESAC

    ISVOID          shift and go to state 38
    COMPLEMENTO     shift and go to state 39
    NOT             shift and go to state 40
    NEW             shift and go to state 41
    ID              shift and go to state 36
    NUMERO          shift and go to state 42
    STRING          shift and go to state 43
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    ABREPARENTESES  shift and go to state 46
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    ABRECHAVES      shift and go to state 49
    LET             shift and go to state 50
    CASE            shift and go to state 51

    expr                           shift and go to state 65

state 39

    (17) expr -> COMPLEMENTO . expr
    (16) expr -> . ISVOID expr
    (17) expr -> . COMPLEMENTO expr
    (18) expr -> . NOT expr
    (19) expr -> . NEW ID
    (20) expr -> . ID
    (21) expr -> . NUMERO
    (22) expr -> . STRING
    (23) expr -> . TRUE
    (24) expr -> . FALSE
    (25) expr -> . expr MENOR expr
    (26) expr -> . expr MENORIGUAL expr
    (27) expr -> . expr IGUAL expr
    (28) expr -> . expr MAIS expr
    (29) expr -> . expr MENOS expr
    (30) expr -> . expr MULTIPLICACAO expr
    (31) expr -> . expr DIVISAO expr
    (32) expr -> . ID ATRIBUICAO expr
    (33) expr -> . ABREPARENTESES expr FECHAPARENTESES
    (34) expr -> . expr ARROBA ID PONTO ID ABREPARENTESES exprlist FECHAPARENTESES
    (35) expr -> . expr PONTO ID ABREPARENTESES exprlist FECHAPARENTESES
    (36) expr -> . ID ABREPARENTESES exprlist FECHAPARENTESES
    (37) expr -> . IF expr THEN expr ELSE expr FI
    (38) expr -> . WHILE expr LOOP expr POOL
    (39) expr -> . ABRECHAVES exprlista FECHACHAVES
    (40) expr -> . LET ID DOISPONTOS ID exprlistlet IN expr
    (41) expr -> . LET ID DOISPONTOS ID ATRIBUICAO expr exprlistlet IN expr
    (42) expr -> . CASE expr OF exprlistcase ESAC

    ISVOID          shift and go to state 38
    COMPLEMENTO     shift and go to state 39
    NOT             shift and go to state 40
    NEW             shift and go to state 41
    ID              shift and go to state 36
    NUMERO          shift and go to state 42
    STRING          shift and go to state 43
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    ABREPARENTESES  shift and go to state 46
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    ABRECHAVES      shift and go to state 49
    LET             shift and go to state 50
    CASE            shift and go to state 51

    expr                           shift and go to state 66

state 40

    (18) expr -> NOT . expr
    (16) expr -> . ISVOID expr
    (17) expr -> . COMPLEMENTO expr
    (18) expr -> . NOT expr
    (19) expr -> . NEW ID
    (20) expr -> . ID
    (21) expr -> . NUMERO
    (22) expr -> . STRING
    (23) expr -> . TRUE
    (24) expr -> . FALSE
    (25) expr -> . expr MENOR expr
    (26) expr -> . expr MENORIGUAL expr
    (27) expr -> . expr IGUAL expr
    (28) expr -> . expr MAIS expr
    (29) expr -> . expr MENOS expr
    (30) expr -> . expr MULTIPLICACAO expr
    (31) expr -> . expr DIVISAO expr
    (32) expr -> . ID ATRIBUICAO expr
    (33) expr -> . ABREPARENTESES expr FECHAPARENTESES
    (34) expr -> . expr ARROBA ID PONTO ID ABREPARENTESES exprlist FECHAPARENTESES
    (35) expr -> . expr PONTO ID ABREPARENTESES exprlist FECHAPARENTESES
    (36) expr -> . ID ABREPARENTESES exprlist FECHAPARENTESES
    (37) expr -> . IF expr THEN expr ELSE expr FI
    (38) expr -> . WHILE expr LOOP expr POOL
    (39) expr -> . ABRECHAVES exprlista FECHACHAVES
    (40) expr -> . LET ID DOISPONTOS ID exprlistlet IN expr
    (41) expr -> . LET ID DOISPONTOS ID ATRIBUICAO expr exprlistlet IN expr
    (42) expr -> . CASE expr OF exprlistcase ESAC

    ISVOID          shift and go to state 38
    COMPLEMENTO     shift and go to state 39
    NOT             shift and go to state 40
    NEW             shift and go to state 41
    ID              shift and go to state 36
    NUMERO          shift and go to state 42
    STRING          shift and go to state 43
    TRUE            shift and go to state 44
    FALSE           shift and go to state 45
    ABREPARENTESES  shift and go to state 46
    IF              shift and go to state 47
    WHILE           shift and go to state 48
    ABRECHAVES      shift and go to state 49
    LET             shift and go to state 50
    CASE            shift and go to state 51

    expr                           shift and go to state 67

state 41

    (19) expr -> NEW . ID

    ID              shift and go to state 68


state 42

    (21) expr -> NUMERO .
